[gd_scene load_steps=12 format=3 uid="uid://bpr4hnc03dosb"]

[ext_resource type="Script" uid="uid://ccr3ru4aljrpj" path="res://scripts/main_menu.gd" id="1_48ign"]
[ext_resource type="FontFile" uid="uid://dqx0b64ivh6qp" path="res://assets/fonts/Pixelmania.ttf" id="2_3d1i7"]
[ext_resource type="Texture2D" uid="uid://3v1rebkmjg27" path="res://assets/sprites/background/BackgorundPiola.jpg" id="2_l7wge"]
[ext_resource type="AudioStream" uid="uid://bhwjrcqlcdm2d" path="res://assets/sprites/effects/effectsSounds/buttonPress.mp3" id="4_l7wge"]
[ext_resource type="Texture2D" uid="uid://dtfhpjij1cupd" path="res://assets/sprites/background/mainMenuGL.png" id="5_7nrmo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3d1i7"]
bg_color = Color(0.16206557, 0.1620656, 0.16206548, 1)
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48ign"]
bg_color = Color(0.27450982, 0.27450982, 0.27450982, 1)
border_color = Color(0.8, 0.8, 0.8, 0.8)
expand_margin_left = 10.0
expand_margin_top = 30.0
expand_margin_right = 10.0
expand_margin_bottom = 30.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_clbkb"]
bg_color = Color(0.27450982, 0.27450982, 0.27450982, 1)
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[sub_resource type="Animation" id="Animation_7nrmo"]
resource_name = "breathingLogo"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.7, 1.7), Vector2(1.8, 1.8), Vector2(1.9, 1.9), Vector2(2, 2), Vector2(1.9, 1.9), Vector2(1.8, 1.8), Vector2(1.7, 1.7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.75, 1.25, 1.7666667, 2.2333333, 2.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [5.934119, 5.951572749300664, 5.969026041820607, 5.98647933434055, 5.969026041820607, 5.951572749300664, 5.934119456780721]
}

[sub_resource type="Animation" id="Animation_clbkb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.7, 1.7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.1086526]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ldpc3"]
_data = {
&"RESET": SubResource("Animation_clbkb"),
&"breathingLogo": SubResource("Animation_7nrmo")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_48ign")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_l7wge")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -330.0
offset_top = -596.0
offset_right = 330.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 70

[node name="play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.019607844, 0.27450982, 0.59607846, 1)
theme_override_fonts/font = ExtResource("2_3d1i7")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_3d1i7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_48ign")
theme_override_styles/hover = SubResource("StyleBoxFlat_clbkb")
text = "JUGAR"

[node name="options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6117647, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_3d1i7")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_3d1i7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_48ign")
theme_override_styles/hover = SubResource("StyleBoxFlat_clbkb")
text = "OPCIONES"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5370108, 0.53701174, 0.5370109, 1)
theme_override_fonts/font = ExtResource("2_3d1i7")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_3d1i7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_48ign")
theme_override_styles/hover = SubResource("StyleBoxFlat_clbkb")
text = "SALIR"

[node name="buttonPress" type="AudioStreamPlayer2D" parent="."]
position = Vector2(948, 194)
stream = ExtResource("4_l7wge")

[node name="MainMenuLogo" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(529, 338.99997)
rotation = 6.1086526
scale = Vector2(1.7, 1.7)
texture = ExtResource("5_7nrmo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainMenuLogo"]
libraries = {
&"": SubResource("AnimationLibrary_ldpc3")
}

[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
